= Changelog

A release with an intentional breaking changes is marked with:

* [breaking] you probably need to change your code
* [minor breaking] you likely don't need to change your code

== Unreleased

== v1.0.39

* https://github.com/clj-commons/etaoin/issues/503[#503]: Address Clojure interop issue introduced by new Thread/sleep signature in JDK 19
* https://github.com/clj-commons/etaoin/issues/513[#513]: Fix rendering of exception when used from REPL
* bumped Etaoin dependencies
* docs:
** https://github.com/clj-commons/etaoin/issues/447[#447]: Describe testing without a display in the link:doc/01-user-guide.adoc#headless-testing[user guide], including a new requirement for a windows manager when using a virtual display on Linux
** https://github.com/clj-commons/etaoin/issues/507[#507]: The current version of babashka, which is the only one we support, no longer requires the a dependency to the babashka spec.alpha fork to use the Etaoin ide feature. Tests and docs updated accordingly.

https://github.com/clj-commons/etaoin/compare/v1.0.38\...v1.0.39[Full commit log]

== v1.0.38 [minor breaking]

Minor Breaking Changes

* https://github.com/clj-commons/etaoin/issues/412[#412]: Rename `etaoin.keys/num-.` to `etaoin.keys/num-dot`. +
The symbol `num-.` is technically an invalid Clojure symbol and can confuse tooling. +
A grep.app for `num-.` found Etaoin itself as the only user of this var.
If your code uses `etaoin.keys/num-.`, you'll need to rename it to `etaoin.keys/num-dot`.

* https://github.com/clj-commons/etaoin/issues/471[#471]: `etaoin.api/defaults` keyword `:path` renamed to `:path-driver` to match keyword used in driver options.

* https://github.com/clj-commons/etaoin/issues/430[#430]: Declare the public API.
We made what we think is a good guess at what the public Etaoin API is.
The following namespaces are now considered internal and subject to change:
+
[%autowidth]
|===
| old namespace | new internal namespace

| `etaoin.client`