@@ -1,9 +1,6 @@
 name: Test
 
-on:
-  push:
-    branches: ['master']
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   setup:
